change html markup more sementic, css is  not yet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </title>
   </head>
   <body>
+    <!-- header -->
     <header>
       <div class="header__logo">
         <a href="http://youtube.com">
@@ -24,111 +25,131 @@
       </div>
     </header>
 
-    <video autoplay controls width="100%" class="video--main">
-      동영상 재생하는데 오류가 발생했습니다.
-      <a href="">문제를 신고해주세요.</a>
-    </video>
+    <!-- video Player -->
+    <section class="player">
+      <video autoplay controls width="100%" class="video--main">
+        동영상 재생하는데 오류가 발생했습니다.
+        <a href="">문제를 신고해주세요.</a>
+      </video>
+    </section>
 
-    <main>
-      <div class="video-main">
-        <div class="video-main__hash-tags">
-          <a href="#" class="video-main__hash-tag">#프론트엔드</a>
-          <a href="#" class="video-main__hash-tag">#개발자취준</a>
-          <a href="#" class="video-main__hash-tag">#취준생브이로그</a>
-        </div>
-
-        <div class="video-main__title">
-          <p>
+    <!-- Video Info -->
+    <section class="info">
+      <!-- Metadata -->
+      <div class="metadata">
+        <ul class="hash-tags">
+          <a href="#"><li>#프론트엔드</li></a>
+          <a href="#"><li>#개발자취준</li></a>
+          <a href="#"><li>#취준생브이로그</li></a>
+        </ul>
+        <div class="titleAhdButton">
+          <span class="title">
             [Bluemin]프론트엔드 취준생 일상
             Vlogㅣ일상/취준/개발/프론트엔드/비전공자개발/클론코딩/html/css/javascript/반응형웹/유튜브클론코딩/Reactive-web
-          </p>
-          <i class="fas fa-caret-down"></i>
+          </span>
+          <button class="moreBtn">
+            <i class="fas fa-caret-down"></i>
+          </button>
         </div>
-
-        <div class="video-main__data">
+        <div class="views">
           <span>조회수 123,456회</span>
           <span> ・ </span>
           <span>2022.09.18</span>
         </div>
-
-        <div class="video-main-buttons">
-          <div class="video-main-button__like">
+      </div>
+      <!-- Actions -->
+      <ul class="action">
+        <li>
+          <button>
             <i class="fas fa-thumbs-up"></i>
             <span>1천</span>
-          </div>
-          <div class="video-main-button__hate">
+          </button>
+        </li>
+        <li>
+          <button>
             <i class="fas fa-thumbs-down"></i>
             <span>싫어요</span>
-          </div>
-          <div class="video-main-button__share">
+          </button>
+        </li>
+        <li>
+          <button>
             <i class="fas fa-share"></i>
             <span>공유</span>
-          </div>
-          <div class="video-main-button__save">
+          </button>
+        </li>
+        <li>
+          <button>
             <i class="fas fa-plus"></i>
             <span>저장</span>
-          </div>
-          <div class="video-main-button__report">
+          </button>
+        </li>
+        <li>
+          <button>
             <i class="fas fa-flag"></i>
             <span>신고 </span>
+          </button>
+        </li>
+      </ul>
+      <!-- Channel Description -->
+      <div class="channel">
+        <div class="metadata">
+          <img src="img/user.png" />
+          <div class="info">
+            <span class="user-name">Bluemin</span>
+            <span class="subscribers">구독자 134.4만명</span>
           </div>
         </div>
-
-        <div class="post-youtuber__data">
-          <div class="post-youtuber__info">
-            <img src="img/user.png" />
-            <div class="post-youtuber__info__data">
-              <span class="post-youtuber__info__user-name">Bluemin</span>
-              <span class="post-youtuber__info__subscriber-count"
-                >구독자 134.4만명</span
-              >
-            </div>
-          </div>
-          <div class="subcribe-btn">구독</div>
-        </div>
+        <button class="subscribe">구독</button>
       </div>
-
-      <aside class="side-playlist-bar">
-        <span class="side-playlist-bar__title">관련 콘텐츠</span>
-        <div class="side-playlist">
-          <div class="side-playlist__contents">
-            <video width="25%" class="side-playlis__video"></video>
-            <div class="side-playlist__data">
-              <p class="side-playlist__title">
-                제목1 최대한 길게 브이로그 웅앵 개발자 되고 싶어요 열심히
-                하겠습니다 난 할 수 있다 천재만재 할 수 있다 아자아자 화이팅~~~~
-              </p>
-              <div class="side-playlist__user-name">Bluemin</div>
-              <div class="side-playlist__veiw-count">조회수</div>
-            </div>
+    </section>
+    <!-- upNext list -->
+    <section class="upNext">
+      <span class="title">관련 콘텐츠</span>
+      <ul>
+        <li class="item">
+          <img src="" alt="" />
+          <div class="info">
+            <span class="title">
+              제목1 최대한 길게 브이로그 웅앵 개발자 되고 싶어요 열심히
+              하겠습니다 난 할 수 있다 천재만재 할 수 있다 아자아자 화이팅~~~~
+            </span>
+            <div class="user-name">Bluemin</div>
+            <div class="veiws">조회수</div>
+            <button class="moreBtn">
+              <i class="fas fa-ellipsis-v"></i>
+            </button>
           </div>
-
-          <div class="side-playlist__contents">
-            <video width="25%" class="side-playlis__video"></video>
-            <div class="side-playlist__data">
-              <p class="side-playlist__title">
-                제목2 최대한 길게 브이로그 웅앵 개발자 되고 싶어요 열심히
-                하겠습니다 난 할 수 있다 천재만재 할 수 있다 아자아자 화이팅~~~~
-              </p>
-              <div class="side-playlist__user-name">Bluemin</div>
-              <div class="side-playlist__veiw-count">조회수</div>
-            </div>
+        </li>
+        <li class="item">
+          <img src="" alt="" />
+          <div class="info">
+            <span class="title">
+              제목2 최대한 길게 브이로그 웅앵 개발자 되고 싶어요 열심히
+              하겠습니다 난 할 수 있다 천재만재 할 수 있다 아자아자 화이팅~~~~
+            </span>
+            <div class="user-name">Bluemin</div>
+            <div class="veiws">조회수</div>
+            <button class="moreBtn">
+              <i class="fas fa-ellipsis-v"></i>
+            </button>
           </div>
-
-          <div class="side-playlist__contents">
-            <video width="25%" class="side-playlis__video"></video>
-            <div class="side-playlist__data">
-              <p class="side-playlist__title">
-                제목3 최대한 길게 브이로그 웅앵 개발자 되고 싶어요 열심히
-                하겠습니다 난 할 수 있다 천재만재 할 수 있다 아자아자 화이팅~~~~
-              </p>
-              <div class="side-playlist__user-name">Bluemin</div>
-              <div class="side-playlist__veiw-count">조회수</div>
-            </div>
+        </li>
+        <li class="item">
+          <img src="" alt="" />
+          <div class="info">
+            <span class="title">
+              제목3 최대한 길게 브이로그 웅앵 개발자 되고 싶어요 열심히
+              하겠습니다 난 할 수 있다 천재만재 할 수 있다 아자아자 화이팅~~~~
+            </span>
+            <div class="user-name">Bluemin</div>
+            <div class="veiws">조회수</div>
+            <button class="moreBtn">
+              <i class="fas fa-ellipsis-v"></i>
+            </button>
           </div>
-        </div>
-      </aside>
-    </main>
+        </li>
+      </ul>
+    </section>
 
     <script
       src="https://kit.fontawesome.com/80f32340dd.js"
